MFG Ready Version/force-app/main/default/objects/mfg_Defect_Technician_Assignment__c/mfg_Defect_Technician_Assignment__c.object-meta.xml
<CustomObject>
    <label>Defect Technician Assignment</label>
    <nameField>
        <displayFormat>AN-{0000000000}</displayFormat>
        <label>Defect Technician  Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Technician Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>