MFG Ready Version/force-app/main/default/objects/mfg_Defect_Technician_Assignment__c/fields/mfg_Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Code__c</fullName>
    <label>Defect Code</label>
    <referenceTo>mfg_Defect_Code__c</referenceTo>
    <relationshipName>Defect_Service_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>