MFG Ready Version/force-app/main/default/objects/mfg_Defect_Technician_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Defect_Code__c</columns>
    <columns>mfg_Technician_Code__c</columns>
    <columns>mfg_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>